add specification for filters